--- a/#_02_dplyr_TMAO/dplyr_TMAO.Rmd
+++ b/#_02_dplyr_TMAO/dplyr_TMAO.Rmd
@@ -146,54 +146,15 @@ library(Hmisc)
 library(plotly)
 library(tidyverse)
 library(rio)
-```
-
-##读取数据
-```{r}
 library(readxl)
-TMAO <- read_excel("~/Desktop/TMAO/#_02_dplyr_TMAO/TMAO_zhangshaowu_chinese.xlsx")
-id_name_tmao <- read_excel("~/Desktop/TMAO/#_02_dplyr_TMAO/id_name_tmao.xlsx")
 library(Tmisc)
-library(tidyverse)
 library(stringr)
-TMAO <- dplyr::left_join(TMAO,id_name_tmao,by = c("ID号","姓名"))#combine the table 
-TMAO$ECG <- factor(TMAO$ECG)
-scr_z <- TMAO$肌酐
-sex_z <- TMAO$性别
-age_z <- TMAO$年龄
-eGFR_Z <- c()
-for(i in 1:length(sex_z)){
-  eGFR_Z <- c(eGFR_Z,eGFR_fun(sex = sex_z[i],scr = scr_z[i],age = age_z[i]))
-}
-TMAO$eGFR <- eGFR_Z
-TMAO %>%
-  remove_empty_cols() %>% remove_empty_rows() %>% Tmisc::convert_to_NA() %>%#remove empty and convert strings to NA
-  mutate(血糖 = str_replace(血糖,"mmol/L","")) %>%
-  mutate(TMA = as.numeric(TMA)) %>%
-  mutate(血糖 = as.numeric(血糖)) %>%
-  to_impute() %>%
-  mutate(BMI = 体重/((身高/100)^2)) %>%
-  mutate(心胸比 = if_else(心胸比=="正常","正常","异常")) %>%
-  mutate(心脏超声状态 = if_else(心脏超声=="正常","正常","异常")) %>%
-  #mutate(eGFR=ifelse(性别=="男",141*(min(肌酐/(88.41*0.9),1)^-0.411)*(max(肌酐/(88.41*0.9),1)^-1.029)*(0.993^年龄) ,141*(min(肌酐/(88.41*0.7),1)^-0.329)*(max(肌酐/(88.41*0.7),1)^-1.029)*(0.993^年龄)*1.018)) %>%
-  mutate(CKD_stage =cut(eGFR, c(min(eGFR,na.rm=T),15,30,60,90,max(eGFR,na.rm=T)), right=FALSE,labels = (5:1)) ) %>%
-    separate(血压, c("收缩压","舒张压"),sep = "/") %>%
-    mutate(收缩压 = as.numeric(收缩压)) %>%
-    mutate(舒张压 = as.numeric(舒张压)) %>%
-    separate('胆红素(总/直接/间接)', c("总胆红素","直接胆红素","间接胆红素"),sep = "/") %>%
-    mutate(总胆红素 = as.numeric(总胆红素)) %>%
-    mutate(直接胆红素 = as.numeric(直接胆红素)) %>%
-    mutate(间接胆红素 = as.numeric(间接胆红素)) %>%
-    separate(入院日期,c("年","月","日")) %>%
-      select(-c(ID号,补充的超声心动图异常和特殊时间,心电图))%>%
-      to_factor() -> TMAO
 ```
 
-
-### TMAO_1_4_5
+### 读取数据 TMAO_1_4_5
 ```{r}
-TMAO_1_4_5 <- read_excel("~/Desktop/TMAO/#_02_dplyr_TMAO/TMAO_zhangshaowu_chinese.xlsx")
-id_name_tmao <- read_excel("~/Desktop/TMAO/#_02_dplyr_TMAO/id_name_tmao.xlsx")
+TMAO_1_4_5 <- read_excel("~/Desktop/TMAO_ai/#_02_dplyr_TMAO/TMAO_zhangshaowu_chinese.xlsx")
+id_name_tmao <- read_excel("~/Desktop/TMAO_ai/#_02_dplyr_TMAO/id_name_tmao.xlsx")
 TMAO_1_4_5 <- dplyr::left_join(TMAO_1_4_5,id_name_tmao,by = c("ID号","姓名"))#combine the table 
 TMAO_1_4_5$ECG <- factor(TMAO_1_4_5$ECG)
 scr_z <- TMAO_1_4_5$肌酐
@@ -267,13 +228,28 @@ TMAO_1_4_5 %>%
 
 ```
 
+## radiant data create
+```{r}
+library(clipr)
+TMAO_1_4_5 %>%
+ filter(TMAO <= 100) %>%
+  select(TMAO,Cardiothoracic_ration) %>%
+  arrange(Cardiothoracic_ration) %>%
+  to_impute() %>%
+  clipr::write_clip()
+
+
+```
+
+## addins radiant
+###
+```{r}
+
+```
+
+# before
 ##三列统计表格
 ```{r}
-TMAO_1_4_5 %>%
- filter(CKD_stage=="stage_5") -> TMAO
-
-TMAO %>%
- to_impute() -> TMAO
 ifelse(TMAO_1_4_5$TMAO <= 17.9,"low","high") %>%
   as.factor() -> TMAO_1_4_5$TMAO_group
 #TMAO_1_4_5$group <- TMAO$TMAO_group
@@ -308,7 +284,7 @@ result_table$p_value <- p_val
 rio::export(result_table,"fac_stat.xlsx",row.names =TRUE) 
 ```
 
-#生成prism 格式的数据
+##生成prism 格式的数据
 ```{r}
 #单变量
 library(radiant)
@@ -376,11 +352,16 @@ plot(result, n = 1000)
 
 ### 散点图
 ```{r}
-g <- ggplot(TMAO,aes(x = rank(eGFR),y = rank(TMAO)))
+TMAO_1_4_5 %>%
+  filter(TMAO <= 100) %>%
+  filter(CKD_stage == "stage_5") %>%
+  select(TMAO,age) %>%
+  arrange(age) -> gg
+g <- ggplot(gg,aes(x =age ,y = TMAO))
 #g <- ggplot(TMAO,aes(x = eGFR,y = TMAO))
 g+geom_point()+
-  geom_smooth(method = "lm",color="red")+
-  theme_bw()
+  geom_smooth(method = "lm",color="black",se = F) +
+  theme_classic()
 
 ```
 
